20030825
 - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
   larsch@trustcenter.de
 - (bal) openbsd-compat/ OpenBSD updates.  Mostly licensing, ansifications
   and minor fixes. OK djm@
 - (bal) redo how we handle 'mysignal()'.  Move it to 
   openbsd-compat/bsd-misc.c, s/mysignal/signal/ and #define signal to
   be our 'mysignal' by default.  OK djm@
 - (dtucker) [acconfig.h auth.c configure.ac sshd.8] Bug #422 again: deny
   any access to locked accounts.  ok djm@
 - (djm) Bug #564: Perform PAM account checks for all authentications when
   UsePAM=yes; ok dtucker
 - (dtucker) [configure.ac] Bug #533, #551: define BROKEN_GETADDRINFO on
   Tru64, solves getnameinfo and "bad addr or host" errors.  ok djm@
 - (dtucker) [README buildbff.sh inventory.sh] (all in contrib/aix)
   Update package builder: correctly handle config variables, use lsuser
   rather than /etc/passwd, fix typos, add Id's.

20030822
 - (djm) s/get_progname/ssh_get_progname/g to avoid conflict with Heimdal 
   -lbroken; ok dtucker 
 - (dtucker) [contrib/cygwin/ssh-user-config] Put keys in authorized_keys
   rather that authorized_keys2.  Patch from vinschen@redhat.com.

20030821
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/14 16:08:58
     [ssh-keygen.c]
     exit after primetest, ok djm@
 - (dtucker) [defines.h] Put CMSG_DATA, CMSG_FIRSTHDR with other CMSG* macros,
   change CMSG_DATA to use __CMSG_ALIGN (and thus work properly), reformat for
   consistency.
 - (dtucker) [configure.ac] Move openpty/ctty test outside of case statement
   and after normal openpty test.

20030813
 - (dtucker) [session.c] Remove #ifdef TIOCSBRK kludge.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/13 08:33:02
     [session.c]
     use more portable tcsendbreak(3) and ignore break_length;
     ok deraadt, millert
   - markus@cvs.openbsd.org 2003/08/13 08:46:31
     [auth1.c readconf.c readconf.h servconf.c servconf.h ssh.c ssh_config